increased the size of the config menu button

--- a/src/main/webapp/public/resources/themes/netiq/style.css
+++ b/src/main/webapp/public/resources/themes/netiq/style.css
@@ -631,7 +631,9 @@ form#setupOtpSecret .btn, form#setupOtpSecret-skip .btn
 	top: 65px;
 	right: 15px;
     background-color: transparent;
-}
+	}
+	#button-openHeader span {font-size: 18px;}
+
 
 .panel-login-display-message {
 	visibility: hidden;
