--- a/src/main/webapp/public/resources/themes/autumn/mobileStyle.css
+++ b/src/main/webapp/public/resources/themes/autumn/mobileStyle.css
@@ -18,13 +18,15 @@
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+ * Mobile Autumn skin
  */
 
 html {
     background-image: url('autumn-bg-mobile.jpg');
-    background-repeat: no-repeat;
+	background-repeat:repeat;
     background-color: white;
-    width: 480px;
+/*    width: 480px; */
 }
 
 .inputfield {
@@ -51,6 +53,8 @@ html {
     width: 480px;
     margin-left: auto;
     margin-right: auto;
+	padding: 15px;
+	border-radius: 0;
 }
 
 .buttonbar {
