--- a/src/main/webapp/public/resources/themes/autumn/mobileStyle.css
+++ b/src/main/webapp/public/resources/themes/autumn/mobileStyle.css
@@ -24,9 +24,9 @@
 
 html {
     background-image: url('autumn-bg-mobile.jpg');
-	background-repeat:repeat;
+    background-repeat: no-repeat;
     background-color: white;
-/*    width: 480px; */
+    width: 480px;
 }
 
 .inputfield {
@@ -53,7 +53,6 @@ html {
     width: 480px;
     margin-left: auto;
     margin-right: auto;
-	padding: 15px;
 	border-radius: 0;
 }
 
