refined layout of new skin (netiq)

--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -692,6 +692,8 @@ select {
 .login-wrapper {
     width:400px;
 }
+.sign-in { margin-left: 15px;}
+
 #login .inputfield, #configLogin .inputfield {
 	margin: 0;
 	padding: 6px;
