--- a/src/main/webapp/public/resources/themes/midnight/style.css
+++ b/src/main/webapp/public/resources/themes/midnight/style.css
@@ -106,3 +106,6 @@ input, button {
     background-color: #444444;
     color: #eeeeee;
 }
+.header-warning-button:hover {
+	background-color: #3e374c;
+	}
