--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -473,6 +473,10 @@ div.progress-container > div {
     position: relative;
 }
 
+#header-username {
+    display:none;
+}
+
 #header-warning {
     text-align: center;
     position: absolute;
