--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -474,7 +474,6 @@ div.progress-container > div {
 }
 
 #header-menu-wrapper { /*temp assignment */
-    display:none;
 }
 
 #header-warning {
@@ -710,13 +709,13 @@ select {
 
 #button-openHeader {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 25px;
+    right: 15px;
     z-index: 100;
     cursor: pointer;
     color: #f39c12;
 }
-	#button-openHeader span {font-size: 16px;}
+	#button-openHeader span {font-size: 16px; color: #0088ce;}
 
 #button-closeHeader {
     background: transparent url("close_40.png") no-repeat scroll 0 0 / cover ;
