--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -84,7 +84,7 @@ form {
 
 table {
     border-collapse: collapse;
-    border: 1px solid #D4D4D4;
+    border: 1px solid #dae1e1;
     width: 98%;
     margin-left: auto;
     margin-right: auto
@@ -92,18 +92,18 @@ table {
 
 table.nomargin {
     border-collapse: collapse;
-    border: 1px solid #D4D4D4;
+    border: 1px solid #dae1e1;
     width: 100%;
     margin:0;
     padding: 0;
 }
 
 .tabContent {
-    padding:0 !important;
+    padding: 10px !important;
 }
 
 table td {
-    border: 1px solid #D4D4D4;
+    border: 1px solid #dae1e1;
     padding: 5px;
 }
 
@@ -112,7 +112,7 @@ table td.title {
     font-weight: bold;
     font-size: 120%;
     padding-right: 10px;
-    background-color: #DDDDDD
+    background-color: #dae1e1;
 }
 
 table td.key {
@@ -120,6 +120,15 @@ table td.key {
     font-weight: bold;
     padding-right: 10px;
     width: 36%;
+}
+
+.health-body {
+	margin: 20px; 
+	padding:0; 
+	max-height: 300px; 
+	overflow-y: auto;
+	border-top: 1px solid #dae1e1;
+	border-bottom: 1px solid #dae1e1;
 }
 
 .health-GOOD {
@@ -370,7 +379,7 @@ input[type=password]::-ms-reveal{display: none;}
     border-style:none;
     border-radius: 3px;
     padding: 5px 10px;
-/*    margin: 9px 7px;  */
+    margin: 9px 7px;  
     text-decoration: none;
     color: white;
     background: #3e374c;
@@ -828,13 +837,8 @@ progress[value] {
 }
 
 .dgrid-row-odd {
-    background: #f6f9f8;
+    background: #fff;
 }
-.dgrid-selected {
-	background: #70cff0;
-	color: #fff;
-}
-
 
 /* begin dialog section */
 .dialogBody { width: 500px; max-width: 500px; }
