--- a/src/main/webapp/public/resources/themes/blue/style.css
+++ b/src/main/webapp/public/resources/themes/blue/style.css
@@ -37,6 +37,34 @@
     height: 50px;
     z-index: 1;
 }
+.header-button {
+	margin: 0px;
+	margin-top: 6px;
+	margin-left: 6px;
+	}
+	.header-button:hover {background: #4f5be8;}
+#header-username-group, #header-username {
+	text-align: right;
+	color: white;
+	}
+#HomeButton span.btn-icon, #LogoutButton span.btn-icon, #header-username-caret span.m-icon {
+	font: 20px FontAwesome;
+	margin-right: 0px;
+}
+#HomeButton span.btn-icon:before {
+	content: "\f015";
+	}
+#LogoutButton span.btn-icon:before {
+	content: "\f08b";
+	}
+#header-username-caret span.m-icon {
+	content: "\f08b";
+	}
+.tile {
+	width: 165px;
+	height: 165px;
+	}
+	.tile:hover {border: 1px solid #4f5be8;}
 
 #centerbody {
     background-color: #eeeeee;
