--- a/src/main/webapp/public/resources/themes/midnight/style.css
+++ b/src/main/webapp/public/resources/themes/midnight/style.css
@@ -59,6 +59,32 @@ html, body {
     color: #aaaaaa;
 }
 
+.header-button {
+	margin: 0px;
+	margin-top: 6px;
+	margin-left: 6px;
+	}
+#header-username-group, #header-username {
+	text-align: right;
+	}
+#HomeButton span.btn-icon, #LogoutButton span.btn-icon, #header-username-caret span.m-icon {
+	font: 20px FontAwesome;
+	margin-right: 0px;
+}
+#HomeButton span.btn-icon:before {
+	content: "\f015";
+	}
+#LogoutButton span.btn-icon:before {
+	content: "\f08b";
+	}
+#header-username-caret span.m-icon {
+	content: "\f08b";
+	}
+.tile {
+	width: 165px;
+	height: 165px;
+	}
+
 #centerbody {
     background-color: #222222;
     padding: 10px 10px 40px 10px;
