--- a/src/main/webapp/public/resources/themes/water/style.css
+++ b/src/main/webapp/public/resources/themes/water/style.css
@@ -61,6 +61,34 @@ p {
     height: 50px;
     z-index: 1;
 }
+#button-openHeader {}
+.header-button {
+	margin: 0px;
+	margin-top: 6px;
+	margin-left: 6px;
+	}
+#header-username-group, #header-username {
+	text-align: right;
+	color: white;
+	}
+#HomeButton span.btn-icon, #LogoutButton span.btn-icon, #header-username-caret span.m-icon {
+	font: 20px FontAwesome;
+	margin-right: 0px;
+}
+#HomeButton span.btn-icon:before {
+	content: "\f015";
+	}
+#LogoutButton span.btn-icon:before {
+	content: "\f08b";
+	}
+#header-username-caret span.m-icon {
+	content: "\f08b";
+	}
+.tile {
+	width: 165px;
+	height: 165px;
+	}	
+
 
 #centerbody {
     background-color: black;
