password dialog minimum length handler

--- a/src/main/webapp/public/resources/configStyle.css
+++ b/src/main/webapp/public/resources/configStyle.css
@@ -325,6 +325,10 @@ input:invalid{
     color:red;
 }
 
+.invalid-value {
+    color: red;
+    font-weight: bold;
+}
 .pane-help {
     border-bottom: 1px #d3d3d3 solid;
     padding: 5px;
